--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,3 @@
 @import "tailwindcss";
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
-
-.btn-primary{
-  @apply bg-gradient-to-r from-blue-500 to-teal-500 text-white px-4 py-2 rounded
-}
-.btn-secondary {
-  @apply bg-clip-text bg-gradient-to-r from-blue-500 to-teal-500 text-transparent
-}
-.home{
-  @apply bg-gradient-to-r from-blue-50 to-white
-}
